# customer-support-chatbot-phase1-live

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/config/: __init__.py  db.py  defaults.py  schema.py
app/contracts/: __init__.py  errors.py  flow.py  rag.py  regen_schemas.py  router.py  store.py  tools.py  tracing.py  wire.py
app/engine/: __init__.py  cache.py  calendar.py  chips.py  delivery.py  errors.py  events.py  executor.py  faults.py  followups.py  fy.py  ports.py  registry.py  results.py  steps.py
app/finx/: __init__.py  envelopes.py  interfaces.py  models.py
app/flows/: __init__.py  brokerage.py  cml.py  contract_notes.py  ledger.py  pnl.py  tax.py
app/llm/: __init__.py  client.py  router.py
app/orchestrator/: __init__.py  agentic.py  bootstrap.py  defaults.py  dispatch.py  lifecycle.py  orchestrator.py  policy.py  ports.py  state.py
app/rag/: __init__.py  config.py  embeddings.py  generator.py  models.py  retriever.py  service.py
app/store/: __init__.py  schema.py  writer.py
app/ticketing/: __init__.py  client.py  config.py  freshdesk.yaml  mapping.py  payload.py  tool.py
app/tracing/: __init__.py  mask.py  (+2 more)
docs/: contract-note-flow-screens (1).html  customer_support_chatbot_phase1.md  finx_api_captures_2026-07-16.md
evals/: README.md  __init__.py  conftest.py  judge.py  metrics.py  simulator.py  synthetic.py  test_callback.py  test_goldens.py  test_multiturn.py  test_rag_singleturn.py  thresholds.yaml
widget/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+293 files in other folders)
